--- a/.editorconfig
+++ b/.editorconfig
@@ -12,6 +12,12 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.css]
+indent_size = 4
+
+[*.scss]
+indent_size = 4
+
 [*.js]
 indent_size = 4
 
