fixed icons loop in project page

--- a/_data/project.yml
+++ b/_data/project.yml
@@ -10,7 +10,7 @@ pt-br:
 
 en:
   tech-specs: "Tech-Specs"
-  project-link: "Projects link"
+  project-link: "Project link"
   client: "Client"
   year: "Year"
   project-type: "Type"
