--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
   ],
   "dependencies": {
     "jquery": "~2.1.1",
-    "bootstrap-sass-official": "~3.2.0+2",
-    "svg-injector": "~1.1.0"
+    "svg-injector": "~1.1.0",
+    "bootstrap-sass-official": "~3.2.0+2"
   }
 }
