--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,24 +1,24 @@
-title: 42i
-email: contato@42i.com.br
-facebook: https://www.facebook.com/somosa42i
-phone: +55 11 3337-5448
-address: Rua General Jardim, 645, sala 62
-github_username:  42i-lab
+title: "42i"
+email: "contato@42i.com.br"
+facebook: "https://www.facebook.com/somosa42i"
+phone: "+55 11 3337-5448"
+address: "Rua General Jardim, 645, sala 62"
+github_username: "42i-lab"
 
 pt-br:
-  title: 42i - Produtora Digital Independente
-  description: Descrição do site
-  search: Busca
+  title: "42i - Produtora Digital Independente"
+  description: "Descrição do site"
+  search: "Busca"
 
   blog:
-    by: por
-    date: data
+    by: "por"
+    date: "data"
 
 en:
-  title: 42i - Independent Digital Producer
-  description: Site's description
-  search: Search
+  title: "42i - Independent Digital Producer"
+  description: "Site's description"
+  search: "Search"
 
   blog:
-    by: by
-    date: date
+    by: "by"
+    date: "date"
