--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 baseurl:     "" # the subpath of your site, e.g. /blog/
-url:         "http://127.0.0.1:4000/" # the base hostname & protocol for your site
-# url:         "http://42ipd.github.io/" # the base hostname & protocol for your site
+# url:         "http://127.0.0.1:4000/" # the base hostname & protocol for your site
+url:         "http://42ipd.github.io/" # the base hostname & protocol for your site
 imgurl:      "/public/images"
 
 destination: ./_site
