First online version

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,8 +8,8 @@ pt-br:
   projects:
     title: "Projetos"
 
-  blog:
-    title: "Blog"
+  #blog:
+    #title: "Blog"
 
   contact:
     title: "Contato"
