--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,6 +1,7 @@
 title: "42i"
 email: "contato@42i.com.br"
 facebook: "https://www.facebook.com/42ipd"
+github: "https://github.com/42ipd"
 phone: "+55 11 3042-0421"
 address: "Rua General Jardim, 645, sala 22"
 github_username: "42i-lab"
