--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,4 +1,4 @@
-title: "42i"
+title: "42i - Produtora Digital Independente"
 email: "contato@42i.com.br"
 facebook: "https://www.facebook.com/42ipd"
 github: "https://github.com/42ipd"
