--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ google_verify: ""
 typekit_id: "oyt7nbz"
 site_name: "42i"
 
-gems: [octopress-autoprefixer]
+gems:
+  - octopress-autoprefixer
 
 defaults:
   - scope:
